# noesis

./: .gitignore  .mcp.json  .pre-commit-config.yaml  NOTICE  README.md  SECURITY.md  STATUS.md  docker-compose.yml
clients/: pyproject.toml
clients/src/noesis_clients/: __init__.py  auth.py  logos.py  persistence.py
clients/src/noesis_clients/testing/: __init__.py
clients/tests/: test_auth.py  test_logos.py  test_persistence.py  test_testing_helpers.py
eval/: .env.e2e.example  AB_RUNBOOK.md  env-template.md  pyproject.toml
eval/src/noesis_eval/: __init__.py
eval/src/noesis_eval/ab/: __init__.py  __main__.py  agent.py  cli.py  mcp_agent.py  results.py  runner.py
eval/src/noesis_eval/alfworld_bench/: __init__.py  env.py  memory_suite.py  metrics.py  praxis_planner.py  runner.py
eval/tests/: _retry_helpers.py  conftest.py  test_ab_cli.py  test_ab_cost.py  test_ab_harness.py  test_ab_history.py  test_ab_stats.py  test_ab_wrapper.py  test_alfworld_bench.py  test_console_inprocess.py  test_hegemonikon_inprocess.py  test_mcp_agent.py  test_memory_suite.py  test_mneme_acceptance.py  test_phase1_e2e.py  test_phase1_inprocess.py  test_praxis_planner.py  test_retry.py  test_retry_decorator.py  test_stage4_loop_inprocess.py
eval/tools/: run_ab.sh
kairos/: Dockerfile  pyproject.toml  railway.toml
kairos/src/kairos/: client.py  core.py  mcp_server_http.py
kairos/tests/: test_client.py  test_core.py  test_propagation.py
schemas/: pyproject.toml
schemas/src/noesis_schemas/: __init__.py  certificates.py  confidence.py  contracts.py  episteme.py  learning.py  memory.py  planning.py  tracing.py
schemas/tests/: test_schemas.py
services/empiria/: Dockerfile  Procfile  README.md  pyproject.toml  railway.toml
services/empiria/tests/: conftest.py  test_auth.py  test_core.py  test_tool_contract.py  test_tracing.py
services/episteme/: Dockerfile  Procfile  README.md  pyproject.toml  railway.toml
services/episteme/tests/: test_acceptance.py  test_auth.py  test_core.py  test_tool_contract.py  test_tracing.py
services/hegemonikon/: Dockerfile  pyproject.toml  railway.toml
services/hegemonikon/tests/: test_auth.py  test_gateway.py  test_streaming_agent.py  test_trace_builder.py
services/kosmos/: Dockerfile  Procfile  README.md  pyproject.toml  railway.toml
services/kosmos/tests/: test_auth.py  test_core.py  test_tool_contract.py  test_tracing.py
services/logos/: CHANGELOG.md  Dockerfile  LICENSE  Procfile  RAILWAY_MIGRATION.md  README.md  STABILITY.md  pyproject.toml  railway.toml
services/logos/benchmarks/: lean_problems.json  predicate_problems.json  problems.json  stress_test.json
services/logos/docs/: agent_collaboration.md  agi_roadmap_v2.md  development_process.md  formal_guarantees.md  gemini_review_de.md  gpt_implementer_instructions.md  logic_extensions_assessment.md  logicbrain_development_roadmap.md  mcp_setup.md  mcp_smoke_test_results.md  metamorphic_ledger.md  new_session_handoff.md  proof_exchange_migration.md  release_playbook.md  roadmap_v013_v020.md  roadmap_v030_v070.md  roadmap_v080_v120.md  stage4_research_watch.md
services/logos/examples/: __init__.py  agent_integration.py  full_reasoning_loop.py  interactive_sessions.py  logic_brain_demo.ipynb  proof_carrying_actions.py  quick_verify.py  reflective_agent.py
services/logos/results/: experiment_compaction_curve.json  experiment_context_retrieval.json  experiment_contradiction_detection.json  experiment_entailment_compaction.json  experiment_memory_scale.json  experiment_mixed_accumulation.json
services/logos/tests/: test___main__.py  test_action_policy.py  test_adversarial_harness.py  test_analyzer.py  test_assumptions.py  test_auth.py  test_belief_graph.py  test_certificate.py  test_certificate_store.py  test_cli.py  test_cli_unit.py  test_counterfactual.py  test_cross_agent_exchange.py  test_diagnostics.py  test_evaluate.py  test_execution_bus.py  test_explain.py  test_external.py  test_generator.py  test_goal_contract.py  test_integration_full_loop.py  test_lean_session.py  test_lean_verifier.py  test_loader.py  test_mcp_action_bus.py  test_mcp_beliefs.py  test_mcp_certificate_store.py  test_mcp_certify.py  test_mcp_contract.py  test_mcp_orchestrate.py  test_mcp_server.py  test_mcp_tools.py  test_metamorphic_action_policy.py  test_metamorphic_assumptions.py  test_metamorphic_belief_graph.py  test_metamorphic_certificate.py  test_metamorphic_certificate_store.py  test_metamorphic_counterfactual.py  test_metamorphic_execution_bus.py  test_metamorphic_explain.py  (+29 more)
services/logos/tools/: __init__.py  check_experiment_results.py  check_fol_results.py  check_lean_results.py  check_predicate_results.py  check_results.py  check_stress_results.py  generate_escalation.py  generate_exam.py  generate_hardmode.py  issue_autopilot.py
services/mneme/: .coverage  Dockerfile  Procfile  README.md  pyproject.toml  railway.toml
services/mneme/tests/: conftest.py  test_acceptance.py  test_auth.py  test_auto_graduate.py  test_core.py  test_logos_client.py  test_tool_contract.py  test_tracing.py
services/praxis/: .coverage  Dockerfile  Procfile  README.md  pyproject.toml  railway.toml
services/praxis/tests/: conftest.py  test_acceptance.py  test_auth.py  test_core.py  test_logos_client.py  test_mcp_tools.py  test_tool_contract.py  test_tracing.py
services/techne/: Dockerfile  Procfile  README.md  pyproject.toml  railway.toml
services/techne/tests/: conftest.py  test_auth.py  test_core.py  test_tool_contract.py  test_tracing.py
services/telos/: Dockerfile  Procfile  README.md  pyproject.toml  railway.toml
services/telos/tests/: test_acceptance.py  test_auth.py  test_core.py  test_tool_contract.py  test_tracing.py
ui/theoria/: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  railway.toml
ui/theoria/examples/: post_trace.py
ui/theoria/tests/: test_auth.py  test_cli.py  test_diff.py  test_export.py  test_filters.py  test_frontend.py  test_ingest.py  test_kairos.py  test_models.py  test_patterns.py  test_schemas_integration.py  test_server.py  test_stats.py  test_store.py
(+195 files in other folders)
