[project]
name = "noesis-clients"
version = "0.1.0"
description = "Shared Python clients for cross-service calls in the Noesis stack"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "noesis-schemas>=0.1.0,<0.2",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noesis_clients"]

[tool.hatch.build.targets.wheel.force-include]
"src/noesis_clients/py.typed" = "noesis_clients/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../schemas/src"]

[tool.coverage.run]
source = ["noesis_clients"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
strict = true

# ``mcp.client.sse`` ships without a ``py.typed`` marker, so under
# strict mypy ``ClientSession`` is typed strictly enough to
# collide with our lightweight ``_Session`` Protocol — even though
# the two are structurally compatible. Treat the module as
# untyped so the Protocol stays the source of truth for what we
# depend on.
[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff.lint]
select = ["E", "F", "I"]
