[project]
name = "noesis-eval"
version = "0.1.0"
description = "Reproducible benchmark harness for the Noesis AGI stack"
requires-python = ">=3.11"
dependencies = [
    "noesis-schemas>=0.1.0,<0.2",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pydantic>=2.0",
    "mcp>=1.0",
    "python-dotenv>=1.0",
    "claude-agent-sdk>=0.1.64,<0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noesis_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "src",
    "../schemas/src",
    "../services/mneme/src",
    "../services/praxis/src",
]
addopts = "-m 'not slow'"
markers = [
    "integration: requires deployed services",
    "unit: no external dependencies",
    "slow: long-running benchmark; opt in via '-m slow' or '-m \"slow or not slow\"'",
]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
mypy_path = "src:../schemas/src:../services/mneme/src:../services/praxis/src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "chromadb",
    "chromadb.*",
    "networkx",
    "networkx.*",
    "pydantic",
    "pydantic.*",
    "mcp",
    "mcp.*",
    "dotenv",
    "claude_agent_sdk",
    "claude_agent_sdk.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "noesis_schemas",
    "noesis_schemas.*",
    "mneme",
    "mneme.*",
    "praxis",
    "praxis.*",
]
follow_imports = "skip"
