[project]
name = "kairos"
version = "0.1.0"
description = "Cross-service observability and tracing for the Noesis AGI stack"
requires-python = ">=3.11"
dependencies = [
    "noesis-schemas>=0.1.0,<0.2",
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp>=1.41.0",
    "pydantic>=2.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kairos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../schemas/src"]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["E", "F", "I"]
