[project]
name = "kairos"
version = "0.1.0"
description = "Cross-service observability and tracing for the Noesis AGI stack"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "noesis-schemas>=0.1.0,<0.2",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "pydantic>=2.13.3",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-cov>=7.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kairos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../schemas/src"]

[tool.coverage.run]
# ``mcp_server_http.py`` is a FastMCP tool-wrapping module whose
# behaviour is exercised by the downstream services' MCP tests, not
# by kairos's own unit suite. Keeping it in the measurement skews
# totals without adding signal; the core + client modules are the
# real surface we want to gate on.
omit = ["src/kairos/mcp_server_http.py"]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["E", "F", "I"]
