[project]
name = "noesis-schemas"
version = "0.1.0"
description = "Shared data contracts for the Noesis AGI stack"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["E", "F", "I"]
