[project]
name = "noesis-schemas"
version = "0.1.0"
description = "Shared data contracts for the Noesis AGI stack"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["noesis_schemas"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["E", "F", "I"]
