[project]
name = "kosmos"
version = "0.1.0"
description = "Causal world model with Do-calculus for the Noesis AGI stack"
requires-python = ">=3.11"
dependencies = [
    "noesis-schemas @ file://../../../schemas",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "networkx>=3.3",
    "pgmpy>=0.1.25",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["E", "F", "I"]
