[project]
name = "logos"
version = "0.9.0"
description = "LLM x Deterministic Logic Verifier — exploiting the P!=NP asymmetry"
requires-python = ">=3.11"
dependencies = [
    "z3-solver>=4.16.0.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "anyio>=4.13.0",
    "mcp>=1.27.0,<2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.152.1",
    "ruff>=0.15.11",
    "mypy>=1.20.1",
    "pdoc>=16.0.0",
]
mcp = [
    "mcp>=1.27.0,<2.0",
]
http = [
    "mcp>=1.27.0,<2.0",
    "anyio>=4.13.0",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
    "kairos",
]

[project.scripts]
logos-mcp = "logos.mcp_server:main"
logos-mcp-http = "logos.mcp_server_http:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "metamorphic: metamorphic relation regression tests",
]

[tool.coverage.run]
source = ["logos"]
omit = [
    "src/logos/lean_session.py",
    "src/logos/lean_verifier.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["z3", "z3.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "mcp",
    "mcp.*",
    "starlette",
    "starlette.*",
    "uvicorn",
    "kairos",
    "kairos.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["logos.mcp_server_http"]
disable_error_code = ["untyped-decorator", "no-any-return"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["W293", "W291"]
