[project]
name = "logos"
version = "0.9.0"
description = "LLM x Deterministic Logic Verifier — exploiting the P!=NP asymmetry"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "z3-solver>=4.12,<5.0",
]

[project.optional-dependencies]
dev = [
    "anyio>=4.0",
    "mcp>=1.26,<2.0",
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pdoc>=14.0",
]
mcp = [
    "mcp>=1.26,<2.0",
]
http = [
    "mcp>=1.26,<2.0",
    "anyio>=4.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "kairos>=0.1.0,<0.2",
]

[project.scripts]
logos-mcp = "logos.mcp_server:main"
logos-mcp-http = "logos.mcp_server_http:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "metamorphic: metamorphic relation regression tests",
]

[tool.coverage.run]
source = ["logos"]
omit = [
    "src/logos/lean_session.py",
    "src/logos/lean_verifier.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["z3", "z3.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "mcp",
    "mcp.*",
    "starlette",
    "starlette.*",
    "uvicorn",
    "kairos",
    "kairos.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["logos.mcp_server_http"]
disable_error_code = ["untyped-decorator", "no-any-return"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["W293", "W291"]
