[project]
name = "mneme"
version = "0.1.0"
description = "Persistent episodic and semantic memory for the Noesis AGI stack"
requires-python = ">=3.11"
dependencies = [
    "noesis-schemas",
    "kairos",
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "chromadb>=1.5.8",
    "mcp>=1.27.0",
    "pydantic>=2.13.3",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-cov>=7.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mneme"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../schemas/src", "../../kairos/src"]

[tool.coverage.run]
source = ["mneme.core"]

[tool.coverage.report]
fail_under = 85

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "chromadb",
    "chromadb.*",
    "mcp",
    "mcp.*",
    "starlette",
    "starlette.*",
    "uvicorn",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["mneme.mcp_server_http"]
disable_error_code = ["untyped-decorator", "no-any-return"]

[tool.ruff.lint]
select = ["E", "F", "I"]
