[project]
name = "mneme"
version = "0.1.0"
description = "Persistent episodic and semantic memory for the Noesis AGI stack"
requires-python = ">=3.11"
dependencies = [
    "noesis-schemas>=0.1.0,<0.2",
    "noesis-clients>=0.1.0,<0.2",
    "kairos>=0.1.0,<0.2",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "chromadb>=0.5",
    "mcp>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mneme"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "src",
    "../../schemas/src",
    "../../kairos/src",
    "../../clients/src",
]
markers = [
    "acceptance: ROADMAP acceptance-criterion benchmark",
]

[tool.coverage.run]
source = ["mneme.core"]

[tool.coverage.report]
fail_under = 85

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "chromadb",
    "chromadb.*",
    "mcp",
    "mcp.*",
    "starlette",
    "starlette.*",
    "uvicorn",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["mneme.mcp_server_http"]
disable_error_code = ["untyped-decorator", "no-any-return"]

[tool.ruff.lint]
select = ["E", "F", "I"]
