[project]
name = "praxis"
version = "0.1.0"
description = "Hierarchical planning and Tree-of-Thoughts search for the Noesis AGI stack"
requires-python = ">=3.11"
dependencies = [
    "noesis-schemas @ file://../../../schemas",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "networkx>=3.3",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../../schemas/src"]

[tool.coverage.run]
source = ["praxis.core"]

[tool.coverage.report]
fail_under = 85

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["E", "F", "I"]
