[project]
name = "techne"
version = "0.1.0"
description = "Verified skill library and strategy reuse for the Noesis AGI stack"
requires-python = ">=3.11"
dependencies = [
    "noesis-schemas",
    "kairos",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "mcp>=1.0",
    "chromadb>=0.5",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/techne"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../schemas/src", "../../kairos/src"]

[tool.coverage.run]
source = ["techne.core"]

[tool.coverage.report]
fail_under = 85

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "mcp",
    "mcp.*",
    "starlette",
    "starlette.*",
    "uvicorn",
    "chromadb",
    "chromadb.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["techne.mcp_server_http"]
disable_error_code = ["untyped-decorator", "no-any-return"]

[tool.ruff.lint]
select = ["E", "F", "I"]
