[project]
name = "theoria"
version = "0.1.0"
description = "Decision-logic visualization UI for the Noesis ecosystem"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Optional: browser-level smoke tests for the single-page UI.
# Requires `playwright install chromium` after pip install.
frontend-tests = [
    "playwright>=1.44",
]

[project.scripts]
theoria = "theoria.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/theoria"]

[tool.hatch.build.targets.wheel.shared-data]
"src/theoria/static" = "theoria/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["theoria"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["W293", "W291"]
